<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/lock_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lock" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_image_view" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/email_text_view"
        app:layout_constraintStart_toStartOf="@+id/email_text_view"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view"
        android:hint="@string/enter_email"
        android:drawableEnd="@drawable/ic_baseline_email"
        android:background="@drawable/shape_rounded_rectangle" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_text_view"
        app:layout_constraintStart_toStartOf="@+id/password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/password_text_view"
        android:hint="@string/enter_password"
        android:drawableEnd="@drawable/ic_baseline_lock"
        android:background="@drawable/shape_rounded_rectangle"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>